testdata/invalid/invalid_filenamelength.book
@some/testsome/testsome/testsome/testsome/testsome/testsome/testsome/testsome/testsome/testsome/testsome/testsome/testsome/testsome/test.pi